--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
              <li><a href="https://github.com/Harsh-COE">HARSH JOSHI</a></li>
 
 
-<li><a href="https://github.com/p">p Sharma</a></li>
-<li><a href="https://github.com/hey-ritikgupta">Ritik Gupta</a></li>
+             <li><a href="https://github.com/p">p Sharma</a></li>
+            <li><a href="https://github.com/hey-ritikgupta">Ritik Gupta</a></li>
 
             <li><a hred="https://github.com/CartoonProgrammers"></a></li>
 
@@ -115,12 +115,9 @@
              <li><a href="https://github.com/kashyapkumar-pdf">Kashyap Kumar</a></li>
              <li><a href="https://github.com/guptaushma">Ushma Gupta</a></li>
              <li><a href="https://github.com/ashwithpoojary98">Ashwith</a></li>
-
-
-
-
-<li><a href="https://github.com/p">p Sharma</a></li>
-            <li><a href="https://github.com/fatimareefat">FATIMA REEFAT</a></li>
+             <li><a href="https://github.com/p">p Sharma</a></li>
+             <li><a href="https://github.com/fatimareefat">FATIMA REEFAT</a></li>
+             <li><a href="https://github.com/rajatdua77">Rajat Dua</a></li>
 
          </ol>
       </div>
